# CET_tftpy

./: demo.md  pyproject.toml  test.yaml
src/: client.py  tftp.py
