[tool.poetry]
name = "cet_tftpy"
version = "0.1.0"
description = ""
authors = ["Muttsuri <Muttsuri@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
poetry = "^1.1.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
