[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Muttsuri", email = "Muttsuri@outlook.com"},
]
dependencies = [
    "docopt>=0.6.2",
    "typing-extensions>=4.2.0",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
